# Porter-ROS

./: .gitattributes  .gitignore  CHANGES.md  CLAUDE.md  README.md  ROOT_CLAUDE.md
.github/: PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build-release.yml  ci.yml  test.yml  verify.yml
docker/: Dockerfile.dev  Dockerfile.prod  docker-compose.dev.yml  docker-compose.prod.yml  docker-entrypoint.sh  docker-verify.sh
esp32_firmware/: README.md  ZEPHYR_INSTRUCTIONS.md  west.yml
esp32_firmware/common/: Kconfig
esp32_firmware/common/hal/: README.md
esp32_firmware/common/hal/tests/: CMakeLists.txt  test_hal_actuator_mock.c  test_hal_registry.c  test_hal_sensor_mock.c
esp32_firmware/common/include/: crc16.h  protocol.h  transport.h
esp32_firmware/common/src/: crc16.cpp  protocol.cpp  transport.c
esp32_firmware/motor_controller/: CMakeLists.txt  Kconfig  app.overlay  prj.conf
esp32_firmware/motor_controller/src/: main.cpp
esp32_firmware/package/: README.md  index.d.ts  index.js  package.json
esp32_firmware/sensor_fusion/: CMakeLists.txt  Kconfig  app.overlay  prj.conf
esp32_firmware/sensor_fusion/src/: main.cpp
esp32_firmware/tests/test_crc16/: CMakeLists.txt  prj.conf  testcase.yaml
esp32_firmware/tests/test_protocol/: CMakeLists.txt  prj.conf  testcase.yaml
esp32_firmware/tests/test_transport/: CMakeLists.txt  Kconfig  prj.conf  testcase.yaml
esp32_firmware/udev/: 99-porter-esp32.rules  install_udev_rules.sh
skills/: 01_installation.md  02_concepts.md  03_tutorials_beginner_cli.md  04_tutorials_beginner_client_libs.md  05_tutorials_intermediate.md  06_tutorials_advanced.md  07_tutorials_demos.md  08_how_to_guides.md  09_distributions.md  10_ros2_project.md  11_tutorials_miscellaneous.md  12_glossary_contact_citations.md  ros2_code_style.md  ros2_developer_guide.md  ros2_quality_guide.md  ros2_release_process.md
skills/zephyr/: 01_getting_started.md  02_kernel_services.md  03_device_driver_model.md  04_application_development.md  05_build_system.md  06_os_services.md  07_usb_cdc_connectivity.md  08_hardware_esp32.md  09_security_safety.md  10_testing_samples.md  11_code_style.md  12_glossary_reference.md
src/orchestration/porter_orchestrator/: package.xml  setup.cfg  setup.py
src/orchestration/porter_orchestrator/config/: orchestrator_params.yaml
src/orchestration/porter_orchestrator/launch/: orchestrator_launch.py
src/orchestration/porter_orchestrator/porter_orchestrator/: __init__.py  lidar_health_monitor.py  porter_state_machine.py
src/orchestration/porter_orchestrator/test/: test_flake8.py  test_orchestrator.py  test_pep257.py
src/porter_ai_assistant/: package.xml  requirements.txt  setup.cfg  setup.py
src/porter_ai_assistant/config/: assistant_params.yaml
src/porter_ai_assistant/cpp/: CMakeLists.txt
src/porter_ai_assistant/cpp/include/: virtus_ai_core.hpp
src/porter_ai_assistant/cpp/src/: bindings.cpp  intent_classifier.cpp  language_detector.cpp  response_formatter.cpp  tool_dispatcher.cpp
src/porter_ai_assistant/cpp/test/: test_intent_classifier.cpp  test_language_detector.cpp  test_tool_dispatcher.cpp
src/porter_ai_assistant/data/: README.md  airport_qa_eval.jsonl  airport_qa_train.jsonl  global_auto_fix_audit.csv  stats.json  system_prompts.yaml  tool_schemas.json
src/porter_ai_assistant/launch/: assistant_launch.py
src/porter_ai_assistant/models/: benchmark_conv_qwen.json  benchmark_tool_qwen.json  dpo_vs_sft_benchmark.json
src/porter_ai_assistant/porter_ai_assistant/: __init__.py  assistant_node.py  config.py  inference_engine.py  orchestrator.py  orchestrator_node.py  prompt_templates.py  rag_retriever.py  (+1 more)
src/porter_esp32_bridge/: CMakeLists.txt  README.md  package.xml
src/porter_esp32_bridge/config/: esp32_bridge_params.yaml
src/porter_esp32_bridge/include/porter_esp32_bridge/: serial_port.hpp
src/porter_esp32_bridge/launch/: esp32_bridge_launch.py
src/porter_esp32_bridge/src/: esp32_motor_bridge.cpp  esp32_sensor_bridge.cpp  serial_port.cpp
src/porter_esp32_bridge/test/: test_heartbeat_latency.cpp
src/porter_gui/: README.md  pubspec.yaml
src/porter_lidar_processor/: package.xml  setup.cfg  setup.py
src/porter_lidar_processor_cpp/: CMakeLists.txt  package.xml
src/porter_lidar_processor_cpp/config/: processor_params.yaml
src/porter_lidar_processor_cpp/include/porter_lidar_processor/: filters.hpp  processor_node.hpp
src/porter_lidar_processor_cpp/launch/: processor_launch.py
src/porter_lidar_processor_cpp/src/: filters.cpp  main.cpp  processor_node.cpp
src/porter_lidar_processor_cpp/test/: test_filters.cpp
src/porter_observability/: package.xml  setup.cfg  setup.py
src/virtus_msgs/: CHANGELOG.md  CMakeLists.txt  README.md  package.xml
src/virtus_msgs/action/: EscortPassenger.action
src/virtus_msgs/msg/: AIResponse.msg  BridgeFrame.msg  BridgeFrameRaw.msg  FleetHeartbeat.msg  IncidentEvent.msg  MotorTelemetry.msg  OrchestratorState.msg  PassengerCommand.msg  PowerTelemetry.msg  RobotStatus.msg  SensorFusion.msg
src/virtus_msgs/srv/: GetFlightInfo.srv  GetRobotStatus.srv  ManualOverride.srv  NavigateTo.srv  UpdateConfig.srv
src/ydlidar_driver/: CMakeLists.txt  README.md  package.xml
src/ydlidar_driver/config/: ydlidar_params.yaml  ydlidar_view.rviz
src/ydlidar_driver/include/ydlidar_driver/: health_monitor.hpp  sdk_adapter.hpp
src/ydlidar_driver/launch/: ydlidar_launch.py  ydlidar_rviz_launch.py
src/ydlidar_driver/src/: health_monitor.cpp  sdk_adapter.cpp  ydlidar_node.cpp
src/ydlidar_driver/tests/: test_adapter_config.cpp  test_health_monitor.cpp  test_scan_conversion.cpp
tests/: README.md  conftest.py
tests/hil/: conftest.py  test_motor_response.py
tests/integration/: test_bag_replay.py  test_bridge_protocol.py  test_orchestrator_integration.py
tests/mocks/: mock_esp32_bridge.py
tests/scenarios/: __init__.py
tests/system/: test_navigation_scenarios.py
tests/unit/: test_fsm_transitions.py  test_kalman_filter.py  test_lidar_filters.py  test_protocol_codec.py
(+82 files in other folders)
