<?xml version="1.0"?>
<package format="3">
  <name>virtus_msgs</name>
  <version>1.0.0</version>
  <description>
    Virtusco custom ROS 2 message, service, and action definitions.
    Single source of truth for all Virtus stack interfaces.
  </description>
  <maintainer email="virtusco.tech@gmail.com">Antony Austin</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>builtin_interfaces</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
</package>
