<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ydlidar_driver</name>
  <version>0.3.2</version>
  <description>
    Production-grade YDLIDAR ROS 2 Jazzy driver for the Porter Robot.
    Model-agnostic: supports X4 Pro, S2 Pro, G4, and other YDLIDAR models
    via YAML parameter configuration. Publishes sensor_msgs/LaserScan and
    diagnostic_msgs/DiagnosticArray.
  </description>
  <maintainer email="antony@virtusco.in">Antony Austin</maintainer>
  <license>Apache-2.0</license>
  <url type="repository">https://github.com/austin207/Porter-ROS</url>
  <url type="website">https://virtusco.in</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>diagnostic_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
